--- a/employee.html
+++ b/employee.html
@@ -597,7 +597,7 @@
                 </div><br/>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary">Save changes</button>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" onclick="closeDialog($(`#employee-add`));">Close</button>
                 </div>
             </div>
         </div>
@@ -609,7 +609,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="employee-detail-title">Detail Employee</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="closeDialog($(`#employee-detail`));">
                     <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
@@ -714,7 +714,7 @@
                     <br/>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" onclick="closeDialog($(`#employee-detail`));">Close</button>
                 </div>
             </div>
         </div>
@@ -727,7 +727,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="employee-update-title">Update Employee</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="closeDialog($(`#employee-detail`));">
 <span aria-hidden="true">&times;</span>
 </button>
                 </div>
@@ -844,7 +844,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary">Save changes</button>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" onclick="closeDialog($(`#employee-update`));">Close</button>
                 </div>
             </div>
         </div>
@@ -857,7 +857,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="employee-remove-title">Remove Employee</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="closeDialog($(`#employee-remove`));">
 <span aria-hidden="true ">&times;</span>
 </button>
                 </div>
@@ -870,7 +870,7 @@
                 </div>
                 <div class="modal-footer ">
                     <button type="button " class="btn btn-danger ">Yes</button>
-                    <button type="button " class="btn btn-secondary " data-dismiss="modal ">Close</button>
+                    <button type="button " class="btn btn-secondary " onclick="closeDialog($(`#employee-remove`));">No</button>
                 </div>
             </div>
         </div>
