--- a/fee-apartment.html
+++ b/fee-apartment.html
@@ -488,7 +488,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="fee-apartment-add-title">Send Notification</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="removeDataAdd()">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="closeDialog($(`#fee-apartment-add`));">
             <span aria-hidden="true">&times;</span>
           </button>
                 </div>
@@ -568,7 +568,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary">Send</button>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" onclick="closeDialog($(`#fee-apartment-add`));">Close</button>
                 </div>
             </div>
         </div>
