--- a/service.html
+++ b/service.html
@@ -467,7 +467,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="service-detail-title">Detail Service</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="closeDialog($(`#service-detail`));">
             <span aria-hidden="true">&times;</span>
           </button>
                 </div>
@@ -514,7 +514,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" onclick="closeDialog($(`#service-detail`));">Close</button>
                 </div>
             </div>
         </div>
