--- a/department.html
+++ b/department.html
@@ -467,7 +467,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="department-title">Detail Department</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="closeDialog($(`#department-detail`));">
             <span aria-hidden="true">&times;</span>
           </button>
                 </div>
@@ -493,7 +493,7 @@
                     <br/><br/>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" onclick="closeDialog($(`#department-detail`));">Close</button>
                 </div>
             </div>
         </div>
@@ -506,7 +506,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="department-update-title">Update Department</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="closeDialog($(`#department-update`));">
             <span aria-hidden="true">&times;</span>
           </button>
                 </div>
@@ -532,7 +532,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary">Save changes</button>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" onclick="closeDialog($(`#department-update`));">Close</button>
                 </div>
             </div>
         </div>
