--- a/request-service.html
+++ b/request-service.html
@@ -471,7 +471,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="service-request-detail-title">Detail Request</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="closeDialog($(`#service-request-detail`));">
         <span aria-hidden="true">&times;</span>
       </button>
                 </div>
@@ -529,8 +529,7 @@
                     </div><br/>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" onclick="closeDialog($(`#service-request-detail`));">Close</button>
                 </div>
             </div>
         </div>
@@ -543,7 +542,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="service-request-update-title">Update Request</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="closeDialog($(`#service-request-update`));">
         <span aria-hidden="true">&times;</span>
       </button>
                 </div>
@@ -564,7 +563,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary">Save changes</button>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" onclick="closeDialog($(`#service-request-update`));">Close</button>
                 </div>
             </div>
         </div>
