--- a/fee-apartment.html
+++ b/fee-apartment.html
@@ -23,6 +23,10 @@
     <link id="theme-style" rel="stylesheet" href="assets/css/plugin/bootstrap-datetimepicker.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/plugin/query-ui.css">
 
+    <!-- Style -->
+    <link rel="stylesheet" href="assets/css/custom/style.css">
+    <link rel="stylesheet" href="assets/css/custom/classic.css">
+    <link rel="stylesheet" href="assets/css/custom/classic.date.css">
 </head>
 
 <body class="app">
@@ -436,12 +440,9 @@
                                             </div>
                                             <div class="col-md-2">
                                                 <div class="form-group" style="margin-right: 30px;padding: 0px;">
-                                                    <label for="date">Month:</label><br>
-                                                    <div id="dp-range">
-                                                        <div class="input-daterange input-group" id="datepicker">
-                                                            <input type="text" class="form-control" autocomplete="off" id="start-date" readonly="readonly">
-                                                        </div>
-                                                    </div>
+                                                    <label for="input_from">Month:</label><br>
+                                                    <input type="text" class="form-control" id="input_from">
+
                                                 </div>
                                             </div>
                                             <div class="col-md-1" style="margin-top: 30px;">
@@ -596,6 +597,11 @@
     <script src="assets/js/plugin/dataTables.bootstrap4.min.js "></script>
     <script src="assets/plugins/popper.min.js "></script>
     <script src="assets/plugins/bootstrap/js/bootstrap.min.js "></script>
+
+    <!--Bootstrap Datepicker [ OPTIONAL ]-->
+    <script src="assets/js/plugin/main.js"></script>
+    <script src="assets/js/plugin/picker.js"></script>
+    <script src="assets/js/plugin/picker.date.js"></script>
 
     <!-- Charts JS -->
     <script src="assets/plugins/chart.js/chart.min.js "></script>
