--- a/employee.html
+++ b/employee.html
@@ -727,7 +727,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="employee-update-title">Update Employee</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="closeDialog($(`#employee-detail`));">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="closeDialog($(`#employee-update`));">
 <span aria-hidden="true">&times;</span>
 </button>
                 </div>
